# RLBot2

./: README.md  main.py  pyproject.toml
RLBot2/: bot.py  export_model.py
RLBot2/Zabot/: agent.py  appearance.cfg  bot.cfg  bot_for_rlbot.py  continuous_act.py  requirements.txt
RLBot2/data/checkpoints/rlgym-ppo-run/45727828/: BOOK_KEEPING_VARS.json
RLBot2/data/checkpoints/rlgym-ppo-run/46228128/: BOOK_KEEPING_VARS.json
RLBot2/data/checkpoints/rlgym-ppo-run/46728428/: BOOK_KEEPING_VARS.json
RLBot2/data/checkpoints/rlgym-ppo-run/47228708/: BOOK_KEEPING_VARS.json
RLBot2/data/checkpoints/rlgym-ppo-run/47729076/: BOOK_KEEPING_VARS.json
RLBot2/data/checkpoints/rlgym-ppo-run/48229260/: BOOK_KEEPING_VARS.json
RLBot2/wandb/: latest-run
RLBot2/wandb/offline-run-20250424_022113-8xi6038z/: run-8xi6038z.wandb
RLBot2/wandb/offline-run-20250424_022113-8xi6038z/files/: requirements.txt  wandb-metadata.json
RLBot2/wandb/offline-run-20250424_023405-wzha4lya/: run-wzha4lya.wandb
RLBot2/wandb/offline-run-20250424_023405-wzha4lya/files/: wandb-metadata.json
