[project]
name = "rlbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rlgym-ppo",
    "rlgym-sim",
    "rocketsim>=2.1.1.post1",
    "torch>=2.7.0",
]

[tool.uv.sources]
rlgym-sim = { git = "https://github.com/AechPro/rocket-league-gym-sim", rev = "main" }
rlgym-ppo = { git = "https://github.com/AechPro/rlgym-ppo" }
